Updates and addition of images

--- a/index.html
+++ b/index.html
@@ -20,15 +20,13 @@
 		
 			<p>Keats Way is at the end of my block, and I hate it. </p>
 		
-		<iframe src="https://www.google.com/maps/embed?pb=!4v1611796812520!6m8!1m7!1s7XQWWINK_lufr1_PihJb-Q!2m2!1d43.45728033832653!2d-80.56900592079276!3f56.21827047393086!4f-14.909696848859511!5f0.7820865974627469" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+		<img src="/img/keats_way.jpg">
 		<p>I hate it because it’s an absolutely massive street and much of it isn’t actually a lane for cars or a bike lane, it’s just unused pavement. </p>
 		
 		
 		
 		
-		<p>Looking around the city, I found streets that were nicer; Keats Way west of Erbsville, for example, has a center median, which looks great.</p>
-		
-		<iframe src="https://www.google.com/maps/embed?pb=!4v1611796869587!6m8!1m7!1sTKvnasEj3pgLIymaamFi-A!2m2!1d43.45544651800681!2d-80.57434265313069!3f257.85356112492116!4f5.092868486820123!5f0.7820865974627469" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+		<p>Looking around the city, I found streets that were nicer; Keats Way west of Erbsville, for example, has a center median, which looks better...</p>
 		
 		<p>But:
 			<ul>
@@ -48,90 +46,9 @@
 		road - 5e5f61
 	-->
 	<h3>Keats Way</h2>
-		<table class="table">
-			<tr>
-				<td style="background-color: #7dbf77; width: 6%">grass</td>
-				<td style="background-color: #e8e0d5; width: 7%"">sidewalk</td>
-				<td style="background-color: #7dbf77; width: 6%"">grass</td>
-				<td style="background-color: #9e9fa3; width: 4%"">bikelane</td>
-				<td style="background-color: #5e5f61; width: 18%"">road</td>
-				<td style="background-color: #5e5f61; width: 18%"">road</td>
-				<td style="background-color: #5e5f61; width: 18%"">road</td>
-				<td style="background-color: #9e9fa3; width: 4%"">bikelane</td>
-				<td style="background-color: #7dbf77; width: 6%"">grass</td>
-				<td style="background-color: #e8e0d5; width: 7%"">sidewalk</td>
-				<td style="background-color: #7dbf77; width: 6%"">grass</td>
-			</tr>
-			<tr>
-				<td style="background-color: #7dbf77; width: 6%">grass</td>
-				<td style="background-color: #e8e0d5; width: 7%"">sidewalk</td>
-				<td style="background-color: #7dbf77; width: 6%"">grass</td>
-				<td style="background-color: #9e9fa3; width: 4%"">bikelane</td>
-				<td style="background-color: #5e5f61; width: 18%"">road</td>
-				<td style="background-color: #5e5f61; width: 18%"">road</td>
-				<td style="background-color: #5e5f61; width: 18%"">road</td>
-				<td style="background-color: #9e9fa3; width: 4%"">bikelane</td>
-				<td style="background-color: #7dbf77; width: 6%"">grass</td>
-				<td style="background-color: #e8e0d5; width: 7%"">sidewalk</td>
-				<td style="background-color: #7dbf77; width: 6%"">grass</td>
-			</tr>
-			<tr>
-				<td style="background-color: #7dbf77; width: 6%">grass</td>
-				<td style="background-color: #e8e0d5; width: 7%"">sidewalk</td>
-				<td style="background-color: #7dbf77; width: 6%"">grass</td>
-				<td style="background-color: #9e9fa3; width: 4%"">bikelane</td>
-				<td style="background-color: #5e5f61; width: 18%"">road</td>
-				<td style="background-color: #5e5f61; width: 18%"">road</td>
-				<td style="background-color: #5e5f61; width: 18%"">road</td>
-				<td style="background-color: #9e9fa3; width: 4%"">bikelane</td>
-				<td style="background-color: #7dbf77; width: 6%"">grass</td>
-				<td style="background-color: #e8e0d5; width: 7%"">sidewalk</td>
-				<td style="background-color: #7dbf77; width: 6%"">grass</td>
-			</tr>
-		</table>
-		
+		<img src="/img/keats-way.png"  style="width:100%; max-width:100%;">
 		<h3>Here’s the approach for streets with medians</h3>
-		<table class="table">
-			<tr>
-				<td style="background-color: #7dbf77; text-align: center; width: 6%">grass</td>
-				<td style="background-color: #e8e0d5; text-align: center; width: 7%"">sidewalk</td>
-				<td style="background-color: #7dbf77; text-align: center; width: 6%"">grass</td>
-				<td style="background-color: #9e9fa3; text-align: center; width: 4%"">bikelane</td>
-				<td style="background-color: #5e5f61; text-align: center; width: 21%"">road</td>
-				<td style="background-color: #7dbf77; text-align: center; width: 6%"">median</td>
-				<td style="background-color: #5e5f61; text-align: center; width: 24%"">road</td>
-				<td style="background-color: #9e9fa3; text-align: center; width: 4%"">bikelane</td>
-				<td style="background-color: #7dbf77; text-align: center; width: 6%"">grass</td>
-				<td style="background-color: #e8e0d5; text-align: center; width: 7%"">sidewalk</td>
-				<td style="background-color: #7dbf77; text-align: center; width: 6%"">grass</td>
-			</tr>
-			<tr>
-				<td style="background-color: #7dbf77; text-align: center; width: 6%">grass</td>
-				<td style="background-color: #e8e0d5; text-align: center; width: 7%"">sidewalk</td>
-				<td style="background-color: #7dbf77; text-align: center; width: 6%"">grass</td>
-				<td style="background-color: #9e9fa3; text-align: center; width: 4%"">bikelane</td>
-				<td style="background-color: #5e5f61; text-align: center; width: 21%"">road</td>
-				<td style="background-color: #7dbf77; text-align: center; width: 6%"">median</td>
-				<td style="background-color: #5e5f61; text-align: center; width: 24%"">road</td>
-				<td style="background-color: #9e9fa3; text-align: center; width: 4%"">bikelane</td>
-				<td style="background-color: #7dbf77; text-align: center; width: 6%"">grass</td>
-				<td style="background-color: #e8e0d5; text-align: center; width: 7%"">sidewalk</td>
-				<td style="background-color: #7dbf77; text-align: center; width: 6%"">grass</td>
-			</tr>
-			<tr>
-				<td style="background-color: #7dbf77; text-align: center; width: 6%">grass</td>
-				<td style="background-color: #e8e0d5; text-align: center; width: 7%"">sidewalk</td>
-				<td style="background-color: #7dbf77; text-align: center; width: 6%"">grass</td>
-				<td style="background-color: #9e9fa3; text-align: center; width: 4%"">bikelane</td>
-				<td style="background-color: #5e5f61; text-align: center; width: 21%"">road</td>
-				<td style="background-color: #7dbf77; text-align: center; width: 6%"">median</td>
-				<td style="background-color: #5e5f61; text-align: center; width: 24%"">road</td>
-				<td style="background-color: #9e9fa3; text-align: center; width: 4%"">bikelane</td>
-				<td style="background-color: #7dbf77; text-align: center; width: 6%"">grass</td>
-				<td style="background-color: #e8e0d5; text-align: center; width: 7%"">sidewalk</td>
-				<td style="background-color: #7dbf77; text-align: center; width: 6%"">grass</td>
-			</tr>
-		</table>
+		<img src="/img/keats-way-median.png" style="width:100%; max-width:100%;">
 
 		<h3>So what if we thought bigger?</h3>
 		
@@ -143,58 +60,16 @@
 		
 		<h3>That still gave drivers reasonable lanes?</h3>
 		
-				
-		<table class="table">
-			<tr>
-				<td style="background-color: #7dbf77;text-align: center; width: 6%">grass</td>
-				<td style="background-color: #e8e0d5;text-align: center; width: 7%">sidewalk</td>
-				<td style="background-color: #7dbf77;text-align: center; width: 6%">grass</td>
-				<td style="background-color: #5e5f61;text-align: center; width: 20%">road</td>
-				<td style="background-color: #5e5f61;text-align: center; width: 20%">road</td>
-				<td style="background-color: #7dbf77;text-align: center; width: 10%">grass</td>
-				<td style="background-color: #9e9fa3;text-align: center; width: 4%">bikelane</td>
-				<td style="background-color: #9e9fa3;text-align: center; width: 4%">bikelane</td>
-				<td style="background-color: #7dbf77;text-align: center; width: 6%">grass</td>
-				<td style="background-color: #e8e0d5;text-align: center; width: 11%">sidewalk</td>
-				<td style="background-color: #7dbf77;text-align: center; width: 6%">grass</td>
-			</tr>
-			<tr>
-				<td style="background-color: #7dbf77;text-align: center; width: 6%">grass</td>
-				<td style="background-color: #e8e0d5;text-align: center; width: 7%">sidewalk</td>
-				<td style="background-color: #7dbf77;text-align: center; width: 6%">grass</td>
-				<td style="background-color: #5e5f61;text-align: center; width: 20%">road</td>
-				<td style="background-color: #5e5f61;text-align: center; width: 20%">road</td>
-				<td style="background-color: #7dbf77;text-align: center; width: 10%">grass</td>
-				<td style="background-color: #9e9fa3;text-align: center; width: 4%">bikelane</td>
-				<td style="background-color: #9e9fa3;text-align: center; width: 4%">bikelane</td>
-				<td style="background-color: #7dbf77;text-align: center; width: 6%">grass</td>
-				<td style="background-color: #e8e0d5;text-align: center; width: 11%">sidewalk</td>
-				<td style="background-color: #7dbf77;text-align: center; width: 6%">grass</td>
-			</tr>
-
-			<tr>
-				<td style="background-color: #7dbf77;text-align: center; width: 6%">grass</td>
-				<td style="background-color: #e8e0d5;text-align: center; width: 7%">sidewalk</td>
-				<td style="background-color: #7dbf77;text-align: center; width: 6%">grass</td>
-				<td style="background-color: #5e5f61;text-align: center; width: 20%">road</td>
-				<td style="background-color: #5e5f61;text-align: center; width: 20%">road</td>
-				<td style="background-color: #7dbf77;text-align: center; width: 10%">grass</td>
-				<td style="background-color: #9e9fa3;text-align: center; width: 4%">bikelane</td>
-				<td style="background-color: #9e9fa3;text-align: center; width: 4%">bikelane</td>
-				<td style="background-color: #7dbf77;text-align: center; width: 6%">grass</td>
-				<td style="background-color: #e8e0d5;text-align: center; width: 11%">sidewalk</td>
-				<td style="background-color: #7dbf77;text-align: center; width: 6%">grass</td>
-			</tr>
-		</table>
+		<img src="/img/keats-way-reimagined.png" style="width:100%; max-width:100%;">
 		<p>Note: this design uses 3M wide lanes, as recomended in the <a href="https://www.waterloo.ca/en/government/resources/Documents/Cityadministration/TransportationMasterPlan/Transportation-Master-Plan---Appendix-D.pdf">City of Waterloo Transportation Master Plan</a> - 3.2.2 Traffic Calming Measures</p>
 		
 		<h2>This approach</h2>
 		<ul>
 			<li>Uses existing pavement for the road (the most expensive thing to build)</li>
-			<li>Cuts 30ft of major road crossing used by hundreds of kids every day throughout the school year. Obliterating the need for “pedestrian islands”</li>
-			<li>Gives cyclists a protected path to ride on</li>
-			<li>Allows pedestrians to walk 15 feet further from cars</li>
-			<li>Gives pedestrians more space, lots of room for families with strollers, dogs, or early walkers</li>
+			<li>Cuts 26ft of major road crossing used by hundreds of kids every day throughout the school year. Obliterating the need for “pedestrian islands”</li>
+			<li>Gives cyclists a protected path to ride on, and a bit more space</li>
+			<li>Allows pedestrians to walk 18 feet further from cars, with additional greenspace seperating them</li>
+			<li>Doubles the size of the sidewalk on one side, giving all users more space</li>
 			<li>Narrows the road to encourage drivers to move at a reasonable speed</li>
 			<li>Provides additional space for groundwater infiltration</li>
 			<li>*Nearly* connects some major neighbourhoods with the Waterloo Uptown core. University between Keats Way & Westmount is already moderately pedestrian & cyclist friendly, we’d just need a connection in that corner of the park.</li>
@@ -219,14 +94,24 @@
 		The city does, you can get a rebate on your stormwater fees if you use a driveway material water can get through. Keats Way between University and Erbsville is >3.5KM long. That’s a lot of driveway.
 		<li>Why is moving pedestrians further from cars “good”</li>
 		The further you are from a car, the quieter it appears. Try holding a conversation while walking down Fisher-Hallman, it’s a challenge. A little more space here should help reduce car volume, and give young walkers & cyclists more confidence. 
-		<li>Why not move the road further to one side, to make this even better!
+		<li>Why not move the road further to one side, to make this even better!</li>
 		I considered this, but:
 		That would also move cars closer to people’s houses, who might not like that.
 		We tend to put storm drains at the side of roads, if we did that we’d have to move them all.
 		There’s probably underground cables and pipes that might be very expensive to move
 		We can’t move too much further without killing all the existing trees, let’s not start from scratch landscaping wise. 
+		<li>Why do Keats Way? We should do _____ instead!</li>
+		Why not both? I am 100% in support of making our city better for people!
+		</ul>
 		
-		
+		<h3>Credit</h3>
+		<p>
+			<ul>
+				<li>Photographs by: Paul Reinheimer</li>
+				<li>Measuring by: Paul Reinheimer & Allison Reinheimer Moore</li>
+				<li>Design by: ... you?</li>
+				<li>Source code available on <a href="https://github.com/preinheimer/keats-way/tree/main">github</a></li>
+			</ul> 
 		
 	  </div>
 	</body>
