Add note about measurements

--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
 		We can’t move too much further without killing all the existing trees, let’s not start from scratch landscaping wise. 
 		<li>Why do Keats Way? We should do _____ instead!</li>
 		Why not both? I am 100% in support of making our city better for people!
+		<li>How did you get these numbers, and how accurate are they?</li>
+		<p>We went out and measured! Measured from one point all the way across to avoid cumulative error. But this is "two people in the snow using a measuring tape from home depot" quality, not "surveyor" quality. Measurements were taken on Keats Way between Leighland & Thornlea (near the top of the hill so we could see cars coming!).
+			<img src="/img/measure.jpg">
 		</ul>
 		
 		<h3>Credit</h3>
