--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <meta property="og:title" content="I hate Keats Way!" />
+    <meta
+      property="og:description"
+      content="A reimagining of Keats Way Waterloo"
+    />
+    <meta property="og:image" content="img/keats-way-reimagined.png" />
+    <meta property="og:url" content="img/keats-way-reimagined.png" />
+    <meta name="twitter:title" content="I hate Keats Way " />
+    <meta
+      name="twitter:description"
+      content=" A reimagining of Keats Way Waterloo"
+    />
+    <meta name="twitter:image" content="img/keats-way-reimagined.png" />
+    <meta name="twitter:card" content="A reimagining of Keats Way Waterloo" />
 
     <!-- Bootstrap CSS -->
     <link
@@ -151,25 +165,68 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md font-lg my-5">
+        <div class="col-md font-lg accent-font my-5">
           <p class="font-xl py-3">So what if we thought bigger?</p>
 
-          <p class="py-3">
-            What if we made a street people wanted to walk down?
-          </p>
-
-          <p class="py-3">
-            One that connected the numerous paths criss-crossing the Beechwood
-            Neighbourhoods to a central artery?
-          </p>
-
-          <p class="py-3">
-            One that gave cyclists, including kids – there are TWO elementary
-            schools on Keats Way between University & Erbsville – a great, safe
-            place to ride?
-          </p>
-
-          <p class="py-3">That still gave drivers reasonable lanes?</p>
+          <div class="row text-center">
+            <div class="col-md-6 py-4">
+              <div
+                style="
+                  background-color: Salmon;
+                  color: white;
+                  border-radius: 12px;
+                  padding: 15px;
+                "
+              >
+                What if we made a street people wanted to walk down?
+              </div>
+            </div>
+            <div
+              class="col-md-6"
+              style="padding-top: 100px; padding-bottom: 20px;"
+            >
+              <div
+                style="
+                  background-color: teal;
+                  color: white;
+                  border-radius: 12px;
+                  padding: 15px;
+                "
+              >
+                One that connected the numerous paths criss-crossing the
+                Beechwood Neighbourhoods to a central artery?
+              </div>
+            </div>
+            <div class="col-md-6 pt-8">
+              <div
+                style="
+                  background-color: orchid;
+                  color: white;
+                  border-radius: 12px;
+                  padding: 15px;
+                "
+              >
+                One that gave cyclists, including kids – there are TWO
+                elementary schools on Keats Way between University & Erbsville –
+                a great, safe place to ride?
+              </div>
+            </div>
+            <div
+              class="col-md-6 px-2 pt-5"
+              style="margin-top: 75px; margin-bottom: 50px;"
+            >
+              <div
+                style="
+                  background-color: SlateBlue;
+                  color: white;
+                  border-radius: 12px;
+                  padding: 15px;
+                "
+              >
+                That still gave drivers reasonable lanes?
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
@@ -348,11 +405,16 @@
           <img class="img-fluid rounded-8" src="img/measure.jpg" />
         </div>
         <div class="col-md-6 font-md py-1">
-          <p>Credit</p>
+          <p>Credits</p>
           <ul>
             <li>Photographs by: Paul Reinheimer</li>
-            <li>Measuring by: Paul Reinheimer & Allison Reinheimer Moore</li>
-            <li>Design by: Samantha Campbell</li>
+            <li>
+              Measuring by: Paul Reinheimer & Allison Reinheimer Moore
+            </li>
+            <li>
+              Design by: Samantha Campbell
+              <a href="https://twitter.com/mssammierose">@MsSammieRose</a>
+            </li>
             <li>
               Source code available on
               <a href="https://github.com/preinheimer/keats-way/tree/main">
