--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap"
       rel="stylesheet"
     />
-    <title>I Hate Keats Way</title>
+    <title>Re-Image Keats Way</title>
 
     <style>
       body {
@@ -85,8 +85,11 @@
       <div class="row">
         <div class="col-md">
           <h1 class="text-center m-5 pt-5 font-xl accent-font">
-            I 😡 Keats Way
+            Re-Imagine Keats Way
           </h1>
+          <h3 class="text-center m-1 pt-1 font-sm accent-font">
+            I 😡 Keats Way 
+          </h3>
         </div>
       </div>
 
@@ -160,7 +163,7 @@
         <div class="col-md">
           <img class="img-fluid rounded-8" src="img/keats-way-median.png" />
           <p class="font-md">
-            Current layout of Keats Way west of Erbsville Waterloo, Ontario
+            Possible layout of Keats Way west with median
           </p>
         </div>
       </div>
@@ -234,12 +237,7 @@
         <div class="col-sm">
           <img class="img-fluid rounded-8" src="img/keats-way-reimagined.png" />
           <p class="font-md">
-            Note: this design uses 3M wide lanes, as recomended in the
-            <a
-              href="https://www.waterloo.ca/en/government/resources/Documents/Cityadministration/TransportationMasterPlan/Transportation-Master-Plan---Appendix-D.pdf"
-              >City of Waterloo Transportation Master Plan</a
-            >
-            - 3.2.2 Traffic Calming Measures
+            Proposed layout of Keats Way, an inviting pedestrian & cycling thoroughfare
           </p>
         </div>
       </div>
