fix social metalinks

--- a/index.html
+++ b/index.html
@@ -12,15 +12,16 @@
       property="og:description"
       content="A reimagining of Keats Way Waterloo"
     />
-    <meta property="og:image" content="img/keats-way-reimagined.png" />
-    <meta property="og:url" content="img/keats-way-reimagined.png" />
+    <meta property="og:image" content="https://keatsway.ca/img/keats-way-reimagined.png" />
+    <meta property="og:url" content="https://keatsway.ca/" />
     <meta name="twitter:title" content="I hate Keats Way " />
     <meta
       name="twitter:description"
       content=" A reimagining of Keats Way Waterloo"
     />
-    <meta name="twitter:image" content="img/keats-way-reimagined.png" />
-    <meta name="twitter:card" content="A reimagining of Keats Way Waterloo" />
+    <meta name="twitter:image" content="https://keatsway.ca/img/keats-way-reimagined.png" />
+    <meta name="twitter:image:alt" content="A profile view of Keats Way, showing protected bike lanes and wider sidewalks." />
+    <meta name="twitter:card" content="summary" />
 
     <!-- Bootstrap CSS -->
     <link
