--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     />
     <meta name="twitter:image" content="https://keatsway.ca/img/keats-way-reimagined.png" />
     <meta name="twitter:image:alt" content="A profile view of Keats Way, showing protected bike lanes and wider sidewalks." />
-    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:card" content="summary_large_image" />
 
     <!-- Bootstrap CSS -->
     <link
