attempting css fix for mobile

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             better but...
           </p>
           <div class="row">
-            <div class="col-sm-1 offset-sm-1">
+            <div class="col-sm-1 offset-sm-1 display-sm-none display-md-block">
               <img class="img-fluid" src="img/right-arrow-4.png" alt="" />
             </div>
             <div class="col-sm-10 py-4">
@@ -135,7 +135,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-sm-1 offset-sm-1">
+            <div class="col-sm-1 offset-sm-1 display-sm-none display-md-block">
               <img class="img-fluid" src="img/right-arrow-4.png" alt="" />
             </div>
             <div class="col-sm-10 py-4">
@@ -143,7 +143,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-sm-1 offset-sm-1">
+            <div class="col-sm-1 offset-sm-1 display-sm-none display-md-block">
               <img class="img-fluid" src="img/right-arrow-4.png" alt="" />
             </div>
             <div class="col-sm-10 py-4">
@@ -151,7 +151,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-sm-1 offset-sm-1">
+            <div class="col-sm-1 offset-sm-1 display-sm-none display-md-block">
               <img class="img-fluid" src="img/right-arrow-4.png" alt="" />
             </div>
             <div class="col-sm-10 py-4">
@@ -247,7 +247,7 @@
         <div class="col-md font-lg">
           <h2 class="font-xl my-3">This proposed solution...</h2>
           <div class="row">
-            <div class="col-sm-1 offset-sm-1">
+            <div class="col-sm-1 offset-sm-1 display-sm-none display-md-block">
               <img class="img-fluid" src="img/right-arrow-4.png" alt="" />
             </div>
             <div class="col-sm-9 py-4">
@@ -256,17 +256,16 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-sm-1 offset-sm-1">
+            <div class="col-sm-1 offset-sm-1 display-sm-none display-md-block">
               <img class="img-fluid" src="img/right-arrow-4.png" alt="" />
             </div>
             <div class="col-sm-9 py-4">
               Cuts 26ft of major road crossing used by hundreds of kids every
-              day throughout the school year. Obliterating the need for
-              “pedestrian islands”
+              day throughout the school year.
             </div>
           </div>
           <div class="row">
-            <div class="col-sm-1 offset-sm-1">
+            <div class="col-sm-1 offset-sm-1 display-sm-none display-md-block">
               <img class="img-fluid" src="img/right-arrow-4.png" alt="" />
             </div>
             <div class="col-sm-9 py-4">
@@ -274,7 +273,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-sm-1 offset-sm-1">
+            <div class="col-sm-1 offset-sm-1 display-sm-none display-md-block">
               <img class="img-fluid" src="img/right-arrow-4.png" alt="" />
             </div>
             <div class="col-sm-9 py-4">
@@ -283,7 +282,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-sm-1 offset-sm-1">
+            <div class="col-sm-1 offset-sm-1 display-sm-none display-md-block">
               <img class="img-fluid" src="img/right-arrow-4.png" alt="" />
             </div>
             <div class="col-sm-9 py-4">
@@ -292,7 +291,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-sm-1 offset-sm-1">
+            <div class="col-sm-1 offset-sm-1 display-sm-none display-md-block">
               <img class="img-fluid" src="img/right-arrow-4.png" alt="" />
             </div>
             <div class="col-sm-9 py-4">
@@ -301,7 +300,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-sm-1 offset-sm-1">
+            <div class="col-sm-1 offset-sm-1 display-sm-none display-md-block">
               <img class="img-fluid" src="img/right-arrow-4.png" alt="" />
             </div>
             <div class="col-sm-9 py-4">
@@ -309,7 +308,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-sm-1 offset-sm-1">
+            <div class="col-sm-1 offset-sm-1 display-sm-none display-md-block">
               <img class="img-fluid" src="img/right-arrow-4.png" alt="" />
             </div>
             <div class="col-sm-9 py-4">
