--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <div class="col-md">
           <img class="img-fluid rounded-8" src="img/keats-way-median.png" />
           <p class="font-md">
-            Possible layout of Keats Way west with median
+            Possible layout of Keats Way with median
           </p>
         </div>
       </div>
