Add new poster assets and link to them

--- a/index.html
+++ b/index.html
@@ -382,6 +382,22 @@
               </div>
             </div>
           </div>
+          <div class="row">
+            <div class="col-sm-1 offset-sm-1 mobile-hide">
+              <img class="img-fluid" src="img/right-arrow-4.png" alt="" />
+            </div>
+            <div class="col-sm-12 col-md-9 py-4">
+              Talk about us on Twitter, use hashtags like #wrawesome and #kwawesome
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-1 offset-sm-1 mobile-hide">
+              <img class="img-fluid" src="img/right-arrow-4.png" alt="" />
+            </div>
+            <div class="col-sm-12 col-md-9 py-4">
+              Share our <a href="/assets/re-imagine keats way png.png">poster image</a>, or print out a few copies of our <a href="/assets/re-imagine keats way LETTER-print.pdf"> poster</a>!
+            </div>
+          </div>
         </div>
       </div>
 
