--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap"
       rel="stylesheet"
     />
-    <title>Re-Image Keats Way</title>
+    <title>Re-Imagine Keats Way</title>
 
     <style>
       body {
@@ -197,7 +197,6 @@
       <div class="row">
         <div class="col-md font-lg accent-font my-5">
           <p class="font-xl py-3">So what if we thought bigger?</p>
-
           <div class="row text-center">
             <div class="col-md-6 py-4">
               <div
@@ -206,6 +205,7 @@
                   color: white;
                   border-radius: 12px;
                   padding: 15px;
+                  line-height: 1.1em;
                 "
               >
                 What if we made a street people wanted to walk down?
@@ -213,7 +213,7 @@
             </div>
             <div
               class="col-md-6"
-              style="padding-top: 100px; padding-bottom: 20px;"
+              
             >
               <div
                 style="
@@ -221,6 +221,7 @@
                   color: white;
                   border-radius: 12px;
                   padding: 15px;
+                  line-height: 1.1em;
                 "
               >
                 One that connected the numerous paths criss-crossing the
@@ -234,6 +235,7 @@
                   color: white;
                   border-radius: 12px;
                   padding: 15px;
+                  line-height: 1.1em;
                 "
               >
                 One that gave cyclists, including kids – there are TWO
@@ -243,7 +245,7 @@
             </div>
             <div
               class="col-md-6 px-2 pt-5"
-              style="margin-top: 75px; margin-bottom: 50px;"
+              
             >
               <div
                 style="
@@ -251,6 +253,7 @@
                   color: white;
                   border-radius: 12px;
                   padding: 15px;
+                  line-height: 1.1em;
                 "
               >
                 That still gave drivers reasonable lanes?
@@ -479,6 +482,14 @@
             Measurements were taken on Keats Way between Leighland & Thornlea
             (near the top of the hill so we could see cars coming!).
           </p>
+          <p class="question">
+            I have ideas, how can I talk to you?
+          </p>
+          <p class="answer">
+            You can talk to Paul on Twitter 
+            <a href="https://twitter.com/preinheimer">@preinheimer</a>, or send 
+            him an email to preinheimer [@] hey.com.
+          </p>
         </div>
       </div>
       <div class="row py-5 my-5">
@@ -488,9 +499,10 @@
         <div class="col-md-6 font-md py-1">
           <p>Credits</p>
           <ul>
+            <li>Content & Concept by: <a href="https://twitter.com/preinheimer">Paul Reinheimer</a></li>
             <li>Photographs by: Paul Reinheimer</li>
             <li>
-              Measuring by: Paul Reinheimer & Allison Reinheimer Moore
+              Measuring by: Paul Reinheimer & <a href="https://twitter.com/schmalliso">Allison Reinheimer Moore</a>
             </li>
             <li>
               Design by: Samantha Campbell
